--- a/src/manex.css
+++ b/src/manex.css
@@ -164,6 +164,65 @@ input[type="button"], input[type="submit"] {
 .titlebar > .actions > .maximize { background-image: url("img/button/maximize.svg"); }
 .titlebar > .actions > .close    { background-image: url("img/button/close.svg");    }
 
+/* loading screen */
+
+.splash {
+	width: 100vw;
+	height: 100vh;
+	background: #212121;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	position: absolute;
+	left: 0;
+	top: 0;
+	z-index: 999;
+	transition: opacity 0.3s;
+}
+
+.splash > .logo {
+	width: 5em;
+	height: 5em;
+	position: relative;
+}
+
+.splash > .logo::before {
+	content: "";
+	width: 5em;
+	height: 5em;
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	border: 2px solid transparent;
+	border-top: 2px solid white;
+	border-bottom: 2px solid white;
+	border-radius: 50%;
+	animation: rotate 1s reverse infinite linear;
+}
+
+.splash > .logo::after {
+	content: "";
+	width: 2em;
+	height: 2em;
+	display: block;
+	position: absolute;
+	top: 1.5em;
+	left: 1.5em;
+	border: 2px solid transparent;
+	border-left: 2px solid white;
+	border-right: 2px solid white;
+	border-radius: 50%;
+	animation: rotate 1s infinite linear;
+}
+
+@keyframes rotate {
+	to {
+		transform: rotate(360deg);
+	}
+}
+
 /* login layout */
 
 .wrapper.login {
