--- a/src/manex.css
+++ b/src/manex.css
@@ -158,6 +158,7 @@ input[type="button"], input[type="submit"] {
 	display: inline-block;
 	background-position: center;
 	background-size: contain;
+	cursor: pointer;
 }
 
 .titlebar > .actions > .minimize { background-image: url("img/button/minimize.svg"); }
