--- a/src/manex.css
+++ b/src/manex.css
@@ -384,3 +384,18 @@ input[type="button"], input[type="submit"] {
 	display: block;
 	background: rgba(255, 255, 255, 0.1);
 }
+
+/* message box */
+
+.messagebox > form {
+	width: 100%;
+	height: 100%;
+	display: flex;
+}
+
+.messagebox > form > input {
+	height: 100%;
+	padding: 0 1em;
+	margin: 0;
+	flex: 1;
+}
