add favorite toggling

--- a/src/manex.css
+++ b/src/manex.css
@@ -454,7 +454,7 @@ input[type="button"], input[type="submit"] {
 
 /* room list */
 
-.room-list > .catagory {
+.room-list > .category {
 	padding: 0 0.3em;
 	padding-bottom: 0.3em;
 	margin: 0 0.5em;
